--- a/transformers_doc/zh/pytorch/training.ipynb
+++ b/transformers_doc/zh/pytorch/training.ipynb
@@ -894,7 +894,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 413
+          "height": 444
         },
         "id": "9bg9ghA6Fkll",
         "outputId": "ff15390b-3d05-4184-cc39-1fb5a952034e"
@@ -1057,8 +1057,8 @@
               "\n",
               "    <div>\n",
               "      \n",
-              "      <progress value='206' max='375' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-              "      [206/375 02:52 < 02:22, 1.18 it/s, Epoch 1.64/3]\n",
+              "      <progress value='329' max='375' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+              "      [329/375 04:47 < 00:40, 1.14 it/s, Epoch 2.62/3]\n",
               "    </div>\n",
               "    <table border=\"1\" class=\"dataframe\">\n",
               "  <thead>\n",
@@ -1075,6 +1075,12 @@
               "      <td>No log</td>\n",
               "      <td>1.366740</td>\n",
               "      <td>0.400000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>2</td>\n",
+              "      <td>No log</td>\n",
+              "      <td>1.043820</td>\n",
+              "      <td>0.554000</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table><p>"
