使用 Colab 创建而成

--- a/transformers_doc/zh/pytorch/training.ipynb
+++ b/transformers_doc/zh/pytorch/training.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/my420254/huggingface_file/blob/main/transformers_doc/zh/pytorch/training.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "oyIraFDqFklP"
       },
       "source": [
@@ -890,30 +880,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 444
+          "height": 656
         },
         "id": "9bg9ghA6Fkll",
-        "outputId": "ff15390b-3d05-4184-cc39-1fb5a952034e"
+        "outputId": "4a1207df-9617-47b0-92d1-e6d9f780020f"
       },
       "outputs": [
         {
-          "output_type": "stream",
+          "metadata": {
+            "tags": null
+          },
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "/usr/local/lib/python3.12/dist-packages/notebook/notebookapp.py:191: SyntaxWarning: invalid escape sequence '\\/'\n",
             "  | |_| | '_ \\/ _` / _` |  _/ -_)\n"
           ]
         },
         {
-          "output_type": "display_data",
           "data": {
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ],
             "application/javascript": [
               "\n",
               "        window._wandbApiKey = new Promise((resolve, reject) => {\n",
@@ -944,31 +933,24 @@
               "            })\n",
               "        });\n",
               "    "
+            ],
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "stream",
+          "metadata": {
+            "tags": null
+          },
           "name": "stderr",
+          "output_type": "stream",
           "text": [
             "\u001b[34m\u001b[1mwandb\u001b[0m: Logging into wandb.ai. (Learn how to deploy a W&B server locally: https://wandb.me/wandb-server)\n",
             "\u001b[34m\u001b[1mwandb\u001b[0m: You can find your API key in your browser here: https://wandb.ai/authorize?ref=models\n",
-            "wandb: Paste an API key from your profile and hit enter:"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            " ··········\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m If you're specifying your api key in code, ensure this code is not shared publicly.\n",
+            "wandb: Paste an API key from your profile and hit enter:\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m If you're specifying your api key in code, ensure this code is not shared publicly.\n",
             "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m Consider setting the WANDB_API_KEY environment variable, or running `wandb login` from the command line.\n",
             "\u001b[34m\u001b[1mwandb\u001b[0m: No netrc file found, creating one.\n",
             "\u001b[34m\u001b[1mwandb\u001b[0m: Appending key for api.wandb.ai to your netrc file: /root/.netrc\n",
@@ -976,89 +958,85 @@
           ]
         },
         {
-          "output_type": "display_data",
           "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
             "text/html": [
               "creating run (0.0s)"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
+            ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
-            ],
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
             "text/html": [
               "Tracking run with wandb version 0.21.3"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
+            ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
-            ],
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
             "text/html": [
               "Run data is saved locally in <code>/content/wandb/run-20250919_064024-dto9hev7</code>"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
+            ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
-            ],
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
             "text/html": [
               "Syncing run <strong><a href='https://wandb.ai/dreamsheep777-linkedin/huggingface/runs/dto9hev7' target=\"_blank\">dry-grass-1</a></strong> to <a href='https://wandb.ai/dreamsheep777-linkedin/huggingface' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
+            ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
-            ],
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
             "text/html": [
               " View project at <a href='https://wandb.ai/dreamsheep777-linkedin/huggingface' target=\"_blank\">https://wandb.ai/dreamsheep777-linkedin/huggingface</a>"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
+            ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
-            ],
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
             "text/html": [
               " View run at <a href='https://wandb.ai/dreamsheep777-linkedin/huggingface/runs/dto9hev7' target=\"_blank\">https://wandb.ai/dreamsheep777-linkedin/huggingface/runs/dto9hev7</a>"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
+            ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
-            ],
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
             "text/html": [
               "\n",
               "    <div>\n",
               "      \n",
-              "      <progress value='329' max='375' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-              "      [329/375 04:47 < 00:40, 1.14 it/s, Epoch 2.62/3]\n",
+              "      <progress value='376' max='375' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+              "      [375/375 05:21, Epoch 3/3]\n",
               "    </div>\n",
               "    <table border=\"1\" class=\"dataframe\">\n",
               "  <thead>\n",
@@ -1083,10 +1061,77 @@
               "      <td>0.554000</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
+              "</table><p>\n",
+              "    <div>\n",
+              "      \n",
+              "      <progress value='94' max='125' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+              "      [ 94/125 00:20 < 00:06, 4.56 it/s]\n",
+              "    </div>\n",
+              "    "
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "\n",
+              "    <div>\n",
+              "      \n",
+              "      <progress value='375' max='375' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+              "      [375/375 06:29, Epoch 3/3]\n",
+              "    </div>\n",
+              "    <table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              " <tr style=\"text-align: left;\">\n",
+              "      <th>Epoch</th>\n",
+              "      <th>Training Loss</th>\n",
+              "      <th>Validation Loss</th>\n",
+              "      <th>Accuracy</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <td>1</td>\n",
+              "      <td>No log</td>\n",
+              "      <td>1.366740</td>\n",
+              "      <td>0.400000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>2</td>\n",
+              "      <td>No log</td>\n",
+              "      <td>1.043820</td>\n",
+              "      <td>0.554000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <td>3</td>\n",
+              "      <td>No log</td>\n",
+              "      <td>1.000860</td>\n",
+              "      <td>0.580000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
               "</table><p>"
             ]
           },
           "metadata": {}
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "TrainOutput(global_step=375, training_loss=1.1839053548177083, metrics={'train_runtime': 429.5938, 'train_samples_per_second': 6.983, 'train_steps_per_second': 0.873, 'total_flos': 789354427392000.0, 'train_loss': 1.1839053548177083, 'epoch': 3.0})"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
         }
       ],
       "source": [
@@ -1113,13 +1158,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "cellView": "form",
         "hide_input": true,
-        "id": "qrq1v9vvFkll"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 372
+        },
+        "id": "qrq1v9vvFkll",
+        "outputId": "d3f5ac02-1f5f-47d5-f8f9-bfb91ab4b22e"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.12/dist-packages/IPython/core/display.py:724: UserWarning: Consider using IPython.display.IFrame instead\n",
+            "  warnings.warn(\"Consider using IPython.display.IFrame instead\")\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/Dh9CL8fyG80?rel=0&amp;controls=0&amp;showinfo=0\" frameborder=\"0\" allowfullscreen></iframe>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ],
       "source": [
         "#@title\n",
         "from IPython.display import HTML\n",
@@ -1140,11 +1212,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
-        "id": "ZilNl-qlFkll"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 184
+        },
+        "id": "ZilNl-qlFkll",
+        "outputId": "a86bea7f-0794-469c-c8be-5b00e61a51bc"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'torch' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-3773600236.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdel\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mdel\u001b[0m \u001b[0mtrainer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mempty_cache\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'torch' is not defined"
+          ]
+        }
+      ],
       "source": [
         "del model\n",
         "del trainer\n",
@@ -1471,8 +1560,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
-      "include_colab_link": true
+      "gpuType": "T4"
     },
     "language_info": {
       "name": "python"
